Made adjustments to make it look more like the PDF version

--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -16,8 +16,13 @@
 <a href="https://github.com/bkvagnini" target="_blank">https://github.com/bkvagnini</a></p>
 </div>
 <div class="skills">
-<h2>Languages</h2>
-<p>PHP, Python, XHTML/HTML5, CSS, JavaScript, Transact-SQL</p>
+<h2>Technologies Used</h2>
+<p><strong>Front End:</strong> XHTML/HTML5, CSS, JavaScript</p>
+<p><strong>Back End: </strong>PHP, Python, MS SQL Server, MySQL</p>
+<p><strong>Design/Media:</strong> Photoshop, Illustrator, InDesign, Premiere Pro, Openshot Video Editor</p>
+<p><strong>Misc.:</strong> Git, Nginx, Apache, IIS</p>
+</div>
+<div class="education">
 <h2>Certifications</h2>
 <p>CIW:  Web Design Specialist, JavaScript Specialist</p>
 <p>CompTIA: I-Net+, Security +</p>
@@ -73,6 +78,7 @@ Using Perl/CGI Scripts (2.5 hrs)
 <li><p>Web Server Administration (IIS and Apache) (30 hours)(developed and taught the week-long course)</p></li>
 <li><p>HTML (3 levels) (30 hours) (revised the curriculum and taught the courses)</p></li>
 <li><p>PHP/MySQL (12 hours) - JavaScript (12 hours) - Perl (6 hours) - Website Accessibility (Section 508)</p></li> (6 hours) (taught these courses)
+</div>
 
 <div class="projects">
 <h2>Projects</h2>
