--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,17 @@
+<!doctype html>
 <html>
 <head>
-<title>Vagnini.net- the technical landing page</title>
-<link rel="stylesheet" href="css/vagnini.css" />
-<link rel="stylesheet" href="css/bootstrap.min.css" />
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Brian K. Vagnini - tech</title>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
+<link href="css/vagnini.css" rel="stylesheet" type="text/css">
+<!-- HTML5 shim for IE backwards compatibility -->
+	<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+			</script>
+		<!--[endif]-->
 </head>
 <body>
 <h2>Welcome to Vagnini.net</h2>
@@ -38,6 +47,8 @@
 	<div class="footer">
 	850-583-0842 | <a href="mailto:brian@vagnini.net">brian@vagnini.net</a>
 	</div>
-			
+	
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="js/bootstrap.min.js"></script>		
 </body>
 </html>
