got the pic to line up with the sidebar

--- a/index.htm
+++ b/index.htm
@@ -14,11 +14,19 @@
 		<!--[endif]-->
 </head>
 <body>
+<header class="col col-lg-12">
 <h2>Welcome to Vagnini.net</h2>
 <p>This is my Technical landing page.</p>
+</header>
+<section>
+<article id="text" class="col col-lg-12">
 <p> The short version? I'm a Network Administrator (Windows, MAC XServe and Linux), who also does some website design, along with a smattering of PHP, JavaScript and Python code. I have also written technical articles & manuals, as well as taught technical courses for a total of five years.</p>
 <p>My Creative landing page is at <a href="http://briankvagnini.com" target="_blank">briankvagnini.com</a></p>
-	<div class="sidebar">
+</article><!--end of overview article --> 
+</section>
+
+	<div class="row">
+	<aside class="col col-lg-3 sidebar"><!--end of sidebar aside -->
 		<ul>
 		<h3> Projects/Links</h3>
 		<li><a href="http://wicketbang.com" target="_blank"> > Wicketbang.com- a web design related blog</a></li>
@@ -26,7 +34,8 @@
 		<li><a href="http://virtualdotcompanies.com" target="_blank"> > virtual.companies- a book about how to Bootstrap your Startup</a></li>
 		<li><a href="http://www.linkedin.com/in/briankvagnini/" target="_blank"> > My LinkedIn account</a></li>
 		<li><a href="https://github.com/bkvagnini" target="_blank"> > My Github account</a></li>
-		<li><a href="BrianKVagniniresume042213.pdf" target="_blank"> > My Resume</a></li>
+		<li><a href="BrianKVagniniresume042213.pdf" target="_blank"> > My Print Resume</a></li>
+		<li><a href="bkvcv.htm" target="_blank"> > My Online Resume</a></li>
 		<br />
 		<hr />
 		<h3>Tools</h3>
@@ -34,17 +43,18 @@
 		<li><a href="tools/yummy/index.php" target="_blank"> > Yums[Your Url Management System] (my version of Delicious)- coming soon...</a></li>
 		<li><a href="tools/tinyrss/index.php" target="_blank"> > TinyTinyRss (replacement for Google Reader)- moving here soon...<a></li>
 		</ul>
-	</div>
+	</aside><!--end of sidebar aside -->
 	
-	<div class="pic">
+	<!-- <div class="pic"> -->
+<div class="col col-lg-9">
 	<img src="images/me-tatshop.jpg" alt="closeup of my face at an angle, looking up" width="90%" height="90%"/>
-	</div>
-	
+	</div><!--end of pic div -->
+	</div><!--end of row div -->	
 	<div class="news">
 	
 	</div>
 	
-	<div class="footer">
+	<div class="col col-lg-12 footer">
 	850-583-0842 | <a href="mailto:brian@vagnini.net">brian@vagnini.net</a>
 	</div>
 	
