--- a/index.htm
+++ b/index.htm
@@ -14,13 +14,13 @@
 		<!--[endif]-->
 </head>
 <body>
-<header class="col col-lg-12">
+<header class="col col-lg-12 text-center">
 <h2>Welcome to Vagnini.net</h2>
 <p>This is my Technical landing page.</p>
 </header>
 <section>
-<article id="text" class="col col-lg-12">
-<p> The short version? I'm a Network Administrator (Windows, MAC XServe and Linux), who also does some website design, along with a smattering of PHP, JavaScript and Python code. I have also written technical articles & manuals, as well as taught technical courses for a total of five years.</p>
+<article id="text" class="col col-lg-12 text-center">
+<p> The short version? I'm a Network Administrator (Windows, MAC XServe and Linux), who also does some website<br /> design, along with a smattering of PHP, JavaScript and Python code. <br /> I have also written technical articles & manuals, as well as taught technical courses for a total of five years.</p>
 <p>My Creative landing page is at <a href="http://briankvagnini.com" target="_blank">briankvagnini.com</a></p>
 </article><!--end of overview article --> 
 </section>
