--- a/index.htm
+++ b/index.htm
@@ -29,19 +29,19 @@
 	<aside class="col col-lg-3 sidebar"><!--end of sidebar aside -->
 		<ul>
 		<h3> Projects/Links</h3>
-		<li><a href="http://wicketbang.com" target="_blank"> > Wicketbang.com- a web design related blog</a></li>
-		<li><a href="http://lessonsfromthetrenches.com" target="_blank"> > Lessons from the Trenches- How to be a GOOD Network Administrator</a> Technical book in progress</li>
-		<li><a href="http://virtualdotcompanies.com" target="_blank"> > virtual.companies- a book about how to Bootstrap your Startup</a></li>
-		<li><a href="http://www.linkedin.com/in/briankvagnini/" target="_blank"> > My LinkedIn account</a></li>
-		<li><a href="https://github.com/bkvagnini" target="_blank"> > My Github account</a></li>
-		<li><a href="BrianKVagniniresume042213.pdf" target="_blank"> > My Print Resume</a></li>
-		<li><a href="bkvcv.htm" target="_blank"> > My Online Resume</a></li>
+		<li><a href="http://wicketbang.com" target="_blank"> Wicketbang.com- a web design related blog</a></li>
+		<li><a href="http://lessonsfromthetrenches.com" target="_blank"> Lessons from the Trenches- How to be a GOOD Network Administrator</a> Technical book in progress</li>
+		<li><a href="http://virtualdotcompanies.com" target="_blank"> virtual.companies- a book about how to Bootstrap your Startup</a></li>
+		<li><a href="http://www.linkedin.com/in/briankvagnini/" target="_blank"> My LinkedIn account</a></li>
+		<li><a href="https://github.com/bkvagnini" target="_blank"> My Github account</a></li>
+		<li><a href="BrianKVagniniresume042213.pdf" target="_blank"> My Print Resume</a></li>
+		<li><a href="bkvcv.htm" target="_blank"> My Online Resume</a></li>
 		<br />
 		<hr />
 		<h3>Tools</h3>
-		<li><a href="tools/m-balances.htm" target="_blank"> > Me Money tool</a></li>
-		<li><a href="tools/yummy/index.php" target="_blank"> > Yums[Your Url Management System] (my version of Delicious)- coming soon...</a></li>
-		<li><a href="tools/tinyrss/index.php" target="_blank"> > TinyTinyRss (replacement for Google Reader)- moving here soon...<a></li>
+		<li><a href="tools/m-balances.htm" target="_blank"> Me Money tool</a></li>
+		<li><a href="tools/yummy/index.php" target="_blank"> Yums[Your Url Management System] (my version of Delicious)- coming soon...</a></li>
+		<li><a href="tools/tinyrss/index.php" target="_blank"> TinyTinyRss (replacement for Google Reader)- moving here soon...<a></li>
 		</ul>
 	</aside><!--end of sidebar aside -->
 	
@@ -55,7 +55,7 @@
 	</div>
 	
 	<div class="col col-lg-12 footer">
-	850-583-0842 | <a href="mailto:brian@vagnini.net">brian@vagnini.net</a>
+	850-583-0842 | <a href="mailto:brian@vagnini.net" class=".glyphicon .glyphicon-envelope">brian@vagnini.net</a>
 	</div>
 	
 <script src="http://code.jquery.com/jquery-latest.js"></script>
