done editting for the day on dev branch

--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
 	
 	</div>
 	
-	<div class="col col-lg-12 footer">
+	<div class="col col-lg-12 footer text-center">
 	850-583-0842 | <a href="mailto:brian@vagnini.net" class=".glyphicon .glyphicon-envelope">brian@vagnini.net</a>
 	</div>
 	
