--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Brian K. Vagnini - tech</title>
+<link href="css/print.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-theme.css" rel="stylesheet" type="text/css">
 <link href="css/vagnini.css" rel="stylesheet" type="text/css">
+
 <!-- HTML5 shim for IE backwards compatibility -->
 	<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
