added div tag for CSS

--- a/tools/memoney/index.htm
+++ b/tools/memoney/index.htm
@@ -17,7 +17,7 @@
 <script src="js/memoney.js"></script>
 </head>
 <body onload="javascript:allzero()">
-
+<div class="app">
 <form name="form1">
 <table>
 <tr>
@@ -107,7 +107,7 @@
 
 	    <p>&nbsp;</p>
 		</form>
-
+</div>
 </body>
 </html>
 
