Update index page, changing pic

--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -96,6 +96,10 @@ Client: Myself<br />
 Technology used: JavaScript /HTML form front-end /JSON back-end</p>
 <br />
 
+<strong><p>Project: Interactive Research Paper (1/14)</strong><br />
+Client: Center for the Advancement of Learning and Assessment (CALA, Florida State University) (part of a team)<br />
+Technology used: HTML5 / Git (project uses HTML5 / CSS3 / JavaScript / JQuery and Git)</p>
+<br />
 <strong><p>Project: Intranet birthday/employee info site (9/13)</strong><br />
 Client: Center for the Advancement of Learning and Assessment (CALA, Florida State University)<br />
 Technology used: HTML form front-end /XML</p>
