--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
         <section>
             <article id="text" class="col col-lg-12 text-center">
                 <p> <em>The short version?</em>  I'm Brian K. Vagnini,  a Network Administrator (Windows, MAC XServe and Linux), moving into <br>Programming in PHP, JavaScript, Ruby, Python and Objective-C code. <br /> I have also written technical articles & manuals, as well as taught technical courses for a total of five years.</p>
-                <p>My Creative landing page (where I do a bunch of other cool stuff) is at <a href="http://briankvagnini.com" >briankvagnini.com</a></p>
+                <p>My Creative landing page <em>(where I do a bunch of other cool stuff)</em> is at <a href="http://briankvagnini.com" >briankvagnini.com</a></p>
             </article><!--end of overview article --> 
         </section>
 
@@ -37,7 +37,7 @@
 		            <li><a href="http://virtualdotcompanies.com"> virtual.companies- a book about how to Bootstrap your Startup</a></li>
 		            <li><a href="http://www.linkedin.com/in/briankvagnini/"> My LinkedIn account</a></li>
 		            <li><a href="https://github.com/bkvagnini"> My Github account</a></li>
-                <li>StackOverflow</li>
+                <li>My stackoverflow account</li>
                 <a href="http://stackoverflow.com/users/3546767/bkvagnini">
                 <img src="http://stackoverflow.com/users/flair/3546767.png" width="208" height="58" alt="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers"> 
                 </a>
@@ -48,8 +48,10 @@
 		            <hr />
 		            <h3>Tools</h3>
 		            <li><a href="tools/m-balances.htm"> Me Money tool</a></li>
-		            <li><a href="tools/yummy/index.php"> Yums[Your Url Management System] (my version of Delicious)- coming soon...</a></li>
+		            <!--
+                  <li><a href="tools/yummy/index.php"> Yums[Your Url Management System] (my version of Delicious)- coming soon...</a></li>
 		            <li><a href="tools/tinyrss/index.php"> TinyTinyRss (replacement for Google Reader)- moving here soon...<a></li>
+                  -->
             </ul>
 	    </aside><!--end of sidebar aside -->
 	
