Update Tools list and Resume.

--- a/index.htm
+++ b/index.htm
@@ -48,6 +48,7 @@
 		            <hr />
 		            <h3>Tools</h3>
 		            <li><a href="tools/m-balances.htm"> Me Money tool</a></li>
+                <li><a href="tools/interactive_chapter/"> Interactive Book with Chapters (template)</a></li>
 		            <!--
                   <li><a href="tools/yummy/index.php"> Yums[Your Url Management System] (my version of Delicious)- coming soon...</a></li>
 		            <li><a href="tools/tinyrss/index.php"> TinyTinyRss (replacement for Google Reader)- moving here soon...<a></li>
