--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -18,9 +18,9 @@
 <div class="skills">
 <h2>Technologies Used</h2>
 <p><strong>Front End:</strong> XHTML/HTML5, CSS, JavaScript, Bootstrap, Markdown</p>
-<p><strong>Back End: </strong> some PHP, some Python, MS SQL Server, MySQL</p>
-<p><strong>Design/Media:</strong> Photoshop, Illustrator, InDesign, Premiere Pro, Openshot Video Editor</p>
-<p><strong>Misc.:</strong> Git, Nginx, Apache, IIS, Jekyll</p>
+<p><strong>Back End: </strong> some PHP, some Python, , some Ruby, some Objective-C </p>
+<p><strong>Database:</strong> MS SQL Server, MySQL</p>
+<p><strong>Misc.:</strong> Git, Nginx, Apache, IIS, Jekyll, Photoshop, Illustrator</p>
 </div>
 <div class="education">
 <h2>Certifications</h2>
@@ -28,9 +28,9 @@
 <p>CompTIA: I-Net+, Security +</p>
 <p>Microsoft: MCP+I</p>
 <h2>Courses taken</h2>
-<h3>Online tutorials</h3>
+<!--<h3>Online tutorials</h3>
 <p>learnpythonthehardway.com - Python 2.7 (Currently Taking)</p>
-<!--
+
 wibit.net -Introduction To Object Oriented Programming 
 
 <h3>Codeacademy.com classes</h3>
@@ -51,6 +51,7 @@ Python
 <li><p>Bootstrap 3: New Features and Migration (0.75 hrs)(9/13/13)</p></li>
 <li><p>Working with Data on the Web (2.5 hrs) (10/3/13)</p></li>
 <li><p>JavaScript and JSON (1.25 hrs) (11/21/13)</p></li>
+<li><p>Objective-C Essentials (6 hrs) (Taking Now)</p></li>
 <li><p>Foundations of Programming: Fundamentals (using JavaScript) (5 hrs)(Taking Soon)</p></li>
 <li><p>Foundations of Programming: Object-Oriented Design (3 hrs)(Taking Soon)</p></li>
 </ul>
@@ -90,6 +91,10 @@ Using Perl/CGI Scripts (2.5 hrs)
 Client: Myself / 24thbay.com<br />
 Technology used: PHP /HTML form front-end /MySQL server back-end</p>
 <br /> -->
+<strong><p>Project: Quality Control Analysis of Statewide Assessment Project (FCAT) (3/14 to Present) </strong><br />
+Client: FL Dept. of Education<br />
+Technology used: Ruby, Python, Objective-C</p>
+<br />
 
 <strong><p>Project: Yums (a self-hosted form of Delicious) (In Planning Stages)</strong><br />
 Client: Myself<br />
