--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -18,7 +18,7 @@
 <div class="skills">
 <h2>Technologies Used</h2>
 <p><strong>Front End:</strong> XHTML/HTML5, CSS, JavaScript, Bootstrap, Markdown</p>
-<p><strong>Back End: </strong> some PHP, some Python, , some Ruby, some Objective-C </p>
+<p><strong>Back End: </strong> some PHP, some Python, some Ruby, some Objective-C </p>
 <p><strong>Database:</strong> MS SQL Server, MySQL</p>
 <p><strong>Misc.:</strong> Git, Nginx, Apache, IIS, Jekyll, Photoshop, Illustrator</p>
 </div>
