Update CV for Objective-C class and AngularJS class.

--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -51,7 +51,8 @@ Python
 <li><p>Bootstrap 3: New Features and Migration (0.75 hrs)(9/13/13)</p></li>
 <li><p>Working with Data on the Web (2.5 hrs) (10/3/13)</p></li>
 <li><p>JavaScript and JSON (1.25 hrs) (11/21/13)</p></li>
-<li><p>Objective-C Essentials (6 hrs) (Taking Now)</p></li>
+<li><p>Objective-C Essentials (6 hrs) (8/15/14)</p></li>
+<li><p>Up and Running with AngularJS (1.25 hrs) (Taking Now)</p></li>
 <li><p>Foundations of Programming: Fundamentals (using JavaScript) (5 hrs)(Taking Soon)</p></li>
 <li><p>Foundations of Programming: Object-Oriented Design (3 hrs)(Taking Soon)</p></li>
 </ul>
@@ -92,7 +93,7 @@ Client: Myself / 24thbay.com<br />
 Technology used: PHP /HTML form front-end /MySQL server back-end</p>
 <br /> -->
 <strong><p>Project: Quality Control Analysis of Statewide Assessment Project (FCAT) (3/14 to Present) </strong><br />
-Client: FL Dept. of Education<br />
+Client: FL Dept. of Education (part of a team)<br />
 Technology used: Ruby, Python, Objective-C</p>
 <br />
 
@@ -107,7 +108,7 @@ Technology used: HTML5 / Git (project uses HTML5 / CSS3 / JavaScript / JQuery an
 <br />
 <strong><p>Project: Intranet birthday/employee info site (9/13)</strong><br />
 Client: Center for the Advancement of Learning and Assessment (CALA, Florida State University)<br />
-Technology used: HTML form front-end /XML</p>
+Technology used: HTML form front-end /XML-Switching to AngularJS and JSON file</p>
 <br />
 
 <strong><p>Project: Event Registration page (7/19/12 to 8/22/12)</strong><br />
