--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,7 @@
 	    <!-- <div class="pic"> -->
         <div class="col col-lg-9">
 	        <!-- <img src="images/EMA-author-pic-adjusted.jpg" alt="My author picture" width="60%" height="60%"/> -->
- 			<img src="images/ me_in_kitchen081614_cropped.jpg" alt="My picture" width="60%" height="60%"/>
+ 			<img src="images/me_in_kitchen081614_cropped.jpg" alt="My picture" width="60%" height="60%"/>
 	    </div><!--end of pic div -->
 	    </div><!--end of row div -->	
 	    <div class="news">
