Update CV b/c of finishing course.

--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -52,8 +52,8 @@ Python
 <li><p>Working with Data on the Web (2.5 hrs) (10/3/13)</p></li>
 <li><p>JavaScript and JSON (1.25 hrs) (11/21/13)</p></li>
 <li><p>Objective-C Essentials (6 hrs) (8/15/14)</p></li>
+<li><p>Foundations of Programming: Fundamentals (using JavaScript) (4.75 hrs)(8/22/14)</p></li>
 <li><p>Up and Running with AngularJS (1.25 hrs) (Taking Now)</p></li>
-<li><p>Foundations of Programming: Fundamentals (using JavaScript) (5 hrs)(Taking Soon)</p></li>
 <li><p>Foundations of Programming: Object-Oriented Design (3 hrs)(Taking Soon)</p></li>
 </ul>
 <!--
