--- a/index.htm
+++ b/index.htm
@@ -23,18 +23,19 @@
     
         <section>
             <article id="text" class="col col-lg-12 text-center">
-                <p> <em>The short version?</em>  I'm Brian K. Vagnini,  a Network Administrator (Windows, MAC XServe and Linux), moving into <br>Programming in PHP, JavaScript, Ruby, Python and Objective-C code. <br /> I have also written technical articles & manuals, as well as taught technical courses for a total of five years.</p>
+                <p> <em>The short version?</em>  I'm Brian K. Vagnini,  a Network Administrator (Windows, MAC XServe and Linux), moving into <br>Programming in PHP, JavaScript, Python. <br /> I have also written technical articles & manuals, as well as taught technical courses for a total of five years.</p>
                 <p>My Creative landing page <em>(where I do a bunch of other cool stuff)</em> is at <a href="http://briankvagnini.com" >briankvagnini.com</a></p>
             </article><!--end of overview article --> 
         </section>
 
 	    <div class="row">
-	    <aside class="col col-lg-3 sidebar"><!--end of sidebar aside -->
+	    <!-- <aside class="col col-lg-3 sidebar"> --><!--end of sidebar aside -->
+        <aside class="col col-lg-6"><!--end of sidebar aside -->
 		    <ul>
 		        <h3> Projects/Links</h3>
 		            <li><a href="http://wicketbang.com"> Wicketbang.com- a web design related blog</a></li>
-		            <li><a href="http://lessonsfromthetrenches.com"> Lessons from the Trenches- How to be a GOOD Network Administrator</a> <em>Technical book in progress</em></li>
-		            <li><a href="http://virtualdotcompanies.com"> virtual.companies- a book about how to Bootstrap your Startup</a></li>
+		            <li><a href="http://lessonsfromthetrenches.com"> Lessons from the Trenches<br>- How to be a GOOD Network Administrator</a> <br><em>(Technical book in progress)</em></li>
+		            <li><a href="http://virtualdotcompanies.com"> virtual.companies-<br> a book about how to Bootstrap your Startup</a></li>
 		            <li><a href="http://www.linkedin.com/in/briankvagnini/"> My LinkedIn account</a></li>
 		            <li><a href="https://github.com/bkvagnini"> My Github account</a></li>
                 <li>My stackoverflow account</li>
@@ -59,8 +60,8 @@
 	    <!-- <div class="pic"> -->
         <div class="col col-lg-9">
 	        <!-- <img src="images/EMA-author-pic-adjusted.jpg" alt="My author picture" width="60%" height="60%"/> -->
- 			<img src="images/me_in_kitchen081614_cropped.jpg" alt="My picture" width="60%" height="60%"/>
-	    </div><!--end of pic div -->
+ 			<!--<img src="images/me_in_kitchen081614_cropped.jpg" alt="My picture" width="60%" height="60%"/> -->
+	    </div><!--end of pic div --> 
 	    </div><!--end of row div -->	
 	    <div class="news">
 	
