--- a/index.htm
+++ b/index.htm
@@ -43,9 +43,9 @@
                 <br><br>
 		            <a href="https://github.com/bkvagnini"> My Github account</a>
                 <br><br>
-                My stackoverflow account
+                <p>My stackoverflow account<br>
                 <a href="http://stackoverflow.com/users/3546767/bkvagnini">
-                <img src="http://stackoverflow.com/users/flair/3546767.png" width="208" height="58" alt="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers"> 
+                <img src="http://stackoverflow.com/users/flair/3546767.png" width="208" height="58" alt="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers"> </p>
                 </a>
                 <br><br>
                 <br>
