Update online resume.

--- a/index.htm
+++ b/index.htm
@@ -49,8 +49,10 @@
                 </a>
                 <br><br>
                 <br>
-		            <a href="BrianProgrammingCV.pdf"> My Print Resume</a>
-                <br><br>
+		            <!-- Removed until I can update the print version 061216
+			    <a href="BrianProgrammingCV.pdf"> My Print Resume</a>
+				-->                
+		<br><br>
 		            <a href="bkvcv.htm"> My Online Resume</a>
                 <br><br>
                 <br />
