--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -54,7 +54,8 @@ Python
 <li><p>Objective-C Essentials (6 hrs) (8/15/14)</p></li>
 <li><p>Foundations of Programming: Fundamentals (using JavaScript) (4.75 hrs)(8/22/14)</p></li>
 <li><p>Up and Running with AngularJS (1.25 hrs) (Taking Now)</p></li>
-<li><p>Foundations of Programming: Object-Oriented Design (3 hrs)(Taking Soon)</p></li>
+<!-- Deleted 061216
+<li><p>Foundations of Programming: Object-Oriented Design (3 hrs)(Taking Soon)</p></li> -->
 </ul>
 <!--
 PHP with MySQL: Beyond the Basics (10.5 hrs)
@@ -86,21 +87,27 @@ Using Perl/CGI Scripts (2.5 hrs)
 <li><p>PHP/MySQL (12 hours) - JavaScript (12 hours) - Perl (6 hours) - Website Accessibility (Section 508)</p></li> (6 hours) (taught these courses)
 </div>
 
+<h3>Other online courses</h3>
+<p>HP-UX System and Network Administration I (40 hours)(1/15/16)</p>
+
 <div class="projects">
 <h2>Projects</h2>
 <!--<strong><p>Project: Customized music player (In Planning Stages)</strong><br />
 Client: Myself / 24thbay.com<br />
 Technology used: PHP /HTML form front-end /MySQL server back-end</p>
 <br /> -->
-<strong><p>Project: Quality Control Analysis of Statewide Assessment Project (FCAT) (3/14 to Present) </strong><br />
+<strong><p>Project: Quality Control Analysis of Statewide Assessment Project (FCAT) (3/14 to 8/14) </strong><br />
 Client: FL Dept. of Education (part of a team)<br />
 Technology used: Ruby, Python, Objective-C</p>
 <br />
 
+<!-- Deleted 061216
 <strong><p>Project: Yums (a self-hosted form of Delicious) (In Planning Stages)</strong><br />
 Client: Myself<br />
 Technology used: JavaScript /HTML form front-end /JSON back-end</p>
 <br />
+
+-->
 
 <strong><p>Project: Interactive Research Paper (1/14)</strong><br />
 Client: Center for the Advancement of Learning and Assessment (CALA, Florida State University) (part of a team)<br />
@@ -108,7 +115,7 @@ Technology used: HTML5 / Git (project uses HTML5 / CSS3 / JavaScript / JQuery an
 <br />
 <strong><p>Project: Intranet birthday/employee info site (9/13)</strong><br />
 Client: Center for the Advancement of Learning and Assessment (CALA, Florida State University)<br />
-Technology used: HTML form front-end /XML-Switching to AngularJS and JSON file</p>
+Technology used: HTML form front-end /XML</p>
 <br />
 
 <strong><p>Project: Event Registration page (7/19/12 to 8/22/12)</strong><br />
