--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -98,7 +98,7 @@ Technology used: PHP /HTML form front-end /MySQL server back-end</p>
 <br /> -->
 <strong><p>Project: Quality Control Analysis of Statewide Assessment Project (FCAT) (3/14 to 8/14) </strong><br />
 Client: FL Dept. of Education (part of a team)<br />
-Technology used: Ruby, Python, Objective-C</p>
+Technology used: Ruby, Python, Objective-C, Git</p>
 <br />
 
 <!-- Deleted 061216
@@ -138,7 +138,7 @@ Client: WFSU-TV/FM (Florida State University)<br />
 Technology used: PHP /HTML form front-end/ MySQL Server back-end </p>
 <br />
 
-<strong><p>Project: MeMoney Calculator (found at <a href="http://vagnini.net/tools/m-balances.htm" target="_blank">http://vagnini.net/tools/m-balances.htm</a>)</strong><br />
+<strong><p>Project: MeMoney Calculator (found at <a href="http://6gen3.com/m-balances.htm">http://6gen3.com/m-balances.htm</a>)</strong><br />
 Client: Myself<br />
 Technology used: JavaScript /HTML form front-end</p>
 <br />
