--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -22,6 +22,7 @@
 <a href="mailto:brian@vagnini.net"> brian@vagnini.net</a> ~ 850-583-0842<br />
 <a href="http://vagnini.net"> http://vagnini.net</a> |
 <a href="https://github.com/bkvagnini">https://github.com/bkvagnini</a></p>
+<p>Organizer of <a href="https://www.meetup.com/pythontlh"/>PythonTLH Meetup</a> group since mid Oct 2018.</p>
 </div>
 <div class="skills">
 <h2>Technologies Used</h2>
