Update Resumes to match Google Drive.

--- a/index.htm
+++ b/index.htm
@@ -35,8 +35,6 @@
 		        <h3> Projects/Links</h3>
 		            <a href="http://wicketbang.com"> Wicketbang.com- a web design related blog</a>
                 <br><br>
-		           <!-- <a href="http://virtualdotcompanies.com"> virtual.companies-<br> a book about how to Bootstrap your Startup</a>
-                <br><br> -->
 		            <a href="http://www.linkedin.com/in/briankvagnini/"> My LinkedIn account</a>
                 <br><br>
 		            <a href="https://github.com/bkvagnini"> My Github account</a>
@@ -47,9 +45,10 @@
                 </a>
                 <br><br>
                 <br>
-		            <a href="BrianProgrammingCV2017.pdf"> My Print Resume</a>
+		            <a href="CodeResume011419.pdf"> My Print Resume</a>
                 <br><br>
-		            <a href="bkvcv.htm"> My Online Resume</a>
+		            <!-- <a href="bkvcv.htm"> My Online Resume</a> -->
+					<a href="CodeResume011419.html"> My Online Resume</a>
                 <br><br>
                 <br />
 		            <hr />
