Temp update to site- redesign.

--- a/bkvcv.htm
+++ b/bkvcv.htm
@@ -13,6 +13,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
 
@@ -20,9 +23,8 @@
 <h1>Brian K. Vagnini</h1>
 <p>5001 Lake Front Dr., Apt H8, Tallahassee, FL 32303<br />
 <a href="mailto:brian@vagnini.net"> brian@vagnini.net</a> ~ 850-583-0842<br />
-<a href="http://vagnini.net"> http://vagnini.net</a> |
+<a href="http://vagnini.net"> http://vagnini.net</a> | 
 <a href="https://github.com/bkvagnini">https://github.com/bkvagnini</a></p>
-<p>Organizer of <a href="https://www.meetup.com/pythontlh"/>PythonTLH Meetup</a> group since mid Oct 2018.</p>
 </div>
 <div class="skills">
 <h2>Technologies Used</h2>
@@ -41,12 +43,6 @@
 <div class="learning">
 <h2>Currently Learning</h2>
 <p>React/Redux, JQuery, and Angular</p>
-
-<h3>Design/Programming Books Read</h3>
-<ul>
-<li>"Don't Make Me Think" by Steve Krug</li>
-<li>"The Pragmatic Programmer" (still reading)</li>
-</ul>
 
 <h2>Courses Taken</h2>
 <p>HP-UX System and Network Administration I (40 hours)(1/15/16)</p>
