--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
                 <img src="http://stackoverflow.com/users/flair/3546767.png" width="208" height="58" alt="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for bkvagnini at Stack Overflow, Q&amp;A for professional and enthusiast programmers"> </p>
                 </a>
                 <br />
-		            <a href="BrianProgrammingCV2017.pdf"> My Print Resume</a>
+		            <a href="BrianKVagnini_CodeResume_041119.pdf"> My Print Resume</a>
                 <br />
 		            <a href="bkvcv.htm"> My Online Resume</a>
                 <br /><br />
