Update Website Showcase visual formatting.

--- a/index.htm
+++ b/index.htm
@@ -32,16 +32,15 @@
 	    <!-- <aside class="col col-lg-3 sidebar"> --><!--end of sidebar aside -->
         <article class="col col-lg-12 text-center"><!--end of sidebar aside -->
 
-		        <h3 class = "bars"> Showcase</h3>
-              <br />
-              <a href="http://www.briankvagnini.com"> briankvagnini.com website (my creative landing page) - random rotating story excerpt, based on page load</a>
-              <br />
-              <a href="http://www.agentsofmad.com"> agentsofmad Band website - uses Responsive Design</a>
-              <br />
-              <a href="http://www.texardrive.com"> Texar Drive Band website - uses Markdown and Github Pages for hosting</a>
-              <br />
-              <a href="http://www.pythontlh.com"> Tallahassee Python Meetup Group website - Flask App (coming soon)</a>
-              <br /><br />
+          <div class = "showcase">
+        <h3 class = "bars"> Website Showcase</h3>
+
+            <a href = "http://www.briankvagnini.com/">briankvagnini.com</a> - My Creative Landing Page - random story excerpt on page load<br />
+            <a href = "http://www.agentsofmad.com/">agentsofmad.com</a> - Band project web site - uses Responsive Design<br />
+            <a href = "http://www.texardrive.com/">texardrive.com</a> - Band project web site - uses Markdown and Github Pages for hosting<br />
+            <a href = "http://www.pythontlh.com/">pythontlh.com</a> - Local Python Meetup group support site - Flask App (coming soon)<br />
+            <br />
+        </div>
             <h3 class = "bars">Professional Profiles</h3>
                 <br />
 		            <a href="http://www.linkedin.com/in/briankvagnini/"> My LinkedIn account</a>
